Agregado estilos a product-validations.js

--- a/views/productos.html
+++ b/views/productos.html
@@ -182,6 +182,7 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="../JS/products.js"></script>
+    <script type="module" src="../validations/product-validations.js"></script>
     <script
       src="https://kit.fontawesome.com/1cc1d82c1f.js"
       crossorigin="anonymous"
