--- a/styles/detailPage.css
+++ b/styles/detailPage.css
@@ -1,3 +1,7 @@
+main {
+  margin-top: 120px;
+}
+
 .containerDetail {
   background-color: #d8aa54;
 
@@ -26,4 +30,9 @@
   height: 20px;
   text-align: center;
   font-size: 14px;
+}
+
+.btnAddToCart{
+  /* margin-top: 50px; */
+  margin-left: 50px;
 }
