--- a/views/login.html
+++ b/views/login.html
@@ -69,7 +69,7 @@
                     />
                     <label for="showPassword" id="labelPassword">Mostrar contraseña</label>
                   </div>
-                  <a href="#" class=" link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover mt-2" id="forgotPassword">Olvidaste la contraseña?</a>
+                  <a href="../views/error404.html" class=" link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover mt-2" id="forgotPassword">Olvidaste la contraseña?</a>
                 </div>
               </div>
               <button
@@ -84,8 +84,8 @@
         <div class="border-top mt-3 d-flex flex-column justify-content-center">
           <h6 class="text-center">o inicia sesión con</h6>
           <div class="d-flex justify-content-center">
-            <button class="btn btn-dark me-2"><img style="width: 20px;" src="https://i.ibb.co/f17x8mb/buscar.png" alt="logoGoogle"></button>
-            <button class="btn btn-dark"><img style="width: 20px;" src="https://i.ibb.co/hHVxfL2/meta.png" alt="logoMeta"></button>
+            <button class="btn btn-dark me-2"><a href="../views/error404.html"><img style="width: 20px;" src="https://i.ibb.co/f17x8mb/buscar.png" alt="logoGoogle"></a></button>
+            <button class="btn btn-dark"><a href="../views/error404.html"><img style="width: 20px;" src="https://i.ibb.co/hHVxfL2/meta.png" alt="logoMeta"></a></button>
           </div>
           <div class="d-flex justify-content-center mt-3">
             <p>Aún no tienes cuenta? <a href="../views/register.html" class="fw-semibold link-warning">Registrate</a></p>
