--- a/views/detailPage.html
+++ b/views/detailPage.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row g-0" id="content">
           <div class="col-md-4" id="imgDetail"></div>
-          <div class="col-md-8 pb-4 containerDetail" id="containerDetail"></div>
+          <div class="col-md-8 pb-4 containerDetail rounded-end" id="containerDetail"></div>
         </div>
       </div>
     </main>
