--- a/views/detailPage.html
+++ b/views/detailPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dawson</title>
+    <link rel="icon" href="../Resources/logoMinuatura.jpg">
     <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/detailPage.css" />
     <link
