--- a/views/register.html
+++ b/views/register.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dawson</title>
+    <link rel="icon" href="../Resources/logoMinuatura.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="../styles/register.css ">
     <link rel="stylesheet" href="../styles/index.css">
