--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -1,41 +1,11 @@
 main {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%235f6052' fill-opacity='0.16' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  }
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
 }
-
-body {
-    background-color:#ffffff ; 
-    
-}
-
-html {
-    font-family: 'Bebas Neue', sans-serif;
-    justify-content: center;
-    flex-wrap: wrap;
-    display: flex;
-}
-
-header {
-    background-color: #221F1F;
-    color: #D8AA54;
-    padding:20px;
-
-}
-
-header h2 {
-         font-size: 35px;
-         margin: 25px;
-         
-}  
 
 .texto {
     margin: 5px;
     font-size: 20px;
-    color: #232322;
+    /* color: #232322; */
 }
 
 .container .card1 {
@@ -45,7 +15,6 @@ header h2 {
     padding: 10px;
     display: flex;    
 }
- 
 
 .container .card {
     border-radius: 30px;
@@ -62,21 +31,6 @@ header h2 {
 }
 .container .card-title {
     font-size: 20px;
-    color: #232322;
+    /* color: #232322; */
     text-align: center;
-   
 }
-
- /* .footer {
-    background-color: #221F1F;
-    text-align: center;
-    color: #D8AA54;
-    padding: 35px;
-}
-
-footer div a {
-    text-decoration: #D8AA54;
-    margin: 0 5px;
-    color:#D8AA54;
-
-}  */
