--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -1,61 +1,54 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="dark">
-    <head>
-         <meta charset="UTF-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <title>Nosotros</title>
-         <link rel="stylesheet" href="..//index.html">
-         <link rel="stylesheet" href="../styles/nosotros.css">
-         <link rel="preconnect" href="https://fonts.googleapis.com">        
-         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-     </head>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dawson</title>
+  <link rel="icon" href="../Resources/logoMinuatura.jpg">
+  <link rel="stylesheet" href="../styles/index.css">
+  <link rel="stylesheet" href="../styles/nosotros.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">        
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
 <body>
-    <header>
-         <nav>
-           <h2> Sobre Nosotros</h2>       
-      </nav>
-    </header>
+    <header></header>
     <main>
-        
-      <div class="texto">
-            <p>Somos un equipo de trabajo formado por 4 integrantes dispuestos a formar una empresa tan buena como los que trabajamos en ella. Conozca a nuestro equipo de Relaciones Públicas y Comunicaciones. Estamos atentos a contestar cualquier requerimiento relacionado con medios.</p>
+      <div class="texto container">
+        <p>Somos un equipo de trabajo formado por 3 integrantes dispuestos a formar una empresa tan buena como los que trabajamos en ella. Conozca a nuestro equipo de Relaciones Públicas y Comunicaciones. Estamos atentos a contestar cualquier requerimiento relacionado con medios.</p>
       </div>
-
-      <div class="container py-5">
-          <div class="row row-cols-1 row-cols-md-5 g4 py-5">
-              <div class="row-cols-md-5">
-                    <div class="card" style="width: 14rem;">
-                        <img src="  " class="card1" alt="...">
-                            <div class="card-body">
-                                 <h5 class="card-title">Daniel Cabral</h5>
-                             </div>
-                       </div>
+      <div class="container py-5 d-flex justify-content-center">
+        <div class="row row-cols-1 row-cols-md-5 g4 py-5">
+          <div class="row-cols-md-5">
+            <div class="card" style="width: 14rem;">
+              <img src="  " class="card1" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Daniel Cabral</h5>
               </div>
-
-              <div class="row-cols-md-5">
-                    <div class="card" style="width: 14rem;">
-                         <img src="../Resources/dani.jpg"class="card1" alt="...">
-                             <div class="card-body">
-                                  <h5 class="card-title">Daniel Assa</h5>
-                               </div>
-                        </div>
-              </div>
-
-               <div class="row-cols-md-5">
-                    <div class="card" style="width: 14rem;">
-                        <img src="../Resources/Imagen ROCIO.jpg" class="card1" alt="...">
-                              <div class="card-body">
-                                 <h5 class="card-title">Rocío Romero</h5>
-                               </div>
-                     </div>
-                 </div>
             </div>
-       </div>
+          </div>
+          <div class="row-cols-md-5">
+            <div class="card" style="width: 14rem;">
+              <img src="../Resources/dani.jpg" class="card1" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Daniel Assa</h5>
+              </div>
+            </div>
+          </div>
+          <div class="row-cols-md-5">
+            <div class="card" style="width: 14rem;">
+              <img src="../Resources/Imagen ROCIO.jpg" class="card1" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Rocío Romero</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 </main>
-       <footer></footer>  
-       <script type="module" src="../JS/nosotros.js"></script>
+  <footer></footer>
+    <script type="module" src="../JS/nosotros.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
