--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -18,8 +18,8 @@
       <div class="texto container">
         <p>Somos un equipo de trabajo formado por 3 integrantes dispuestos a formar una empresa tan buena como los que trabajamos en ella. Conozca a nuestro equipo de Relaciones Públicas y Comunicaciones. Estamos atentos a contestar cualquier requerimiento relacionado con medios.</p>
       </div>
-      <div class="container py-5 d-flex justify-content-center">
-        <div class="row row-cols-1 row-cols-md-5 g4 py-5">
+      <div class="container py-5">
+        <div class="d-flex flex-column align-items-center flex-lg-row justify-content-lg-around g4 py-5">
           <div class="row-cols-md-5">
             <div class="card" style="width: 14rem;">
               <img src="  " class="card1" alt="...">
