--- a/views/register.html
+++ b/views/register.html
@@ -1,92 +1,95 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="dark">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dawson</title>
-    <link rel="icon" href="../Resources/logoMinuatura.jpg">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="../styles/register.css ">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/73f851add2.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dawson</title>
+  <link rel="icon" href="../Resources/logoMinuatura.jpg">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../styles/register.css ">
+  <link rel="stylesheet" href="../styles/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&family=Open+Sans:ital,wght@1,300&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/73f851add2.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-    <header></header>
-    <main>
-      <!-- FORMULARIO DE REGISTRO --> 
-     
-    <form action="#" class="formulario" id="formulario">
-     
-        <!--GRUPO DE USUARIO - -->
-            <div class="formulario__grupo" id="grupo__nombre">
-                        <label class="formulario__label">Nombre</label>
-                  <div class="formulario__grupo-input">
-                        <input type="text" class="formulario__input" name="nombre" id="nombre">
-                        <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                   </div>
-                        <p class="formulario__input-error">El Nombre debe tener máximo de 8 caracteres y solo se admiten mayúsculas y minúsculas.</p>
-               </div>
+  <header></header>
+  <main>
+    <!-- FORMULARIO DE REGISTRO -->
 
-             <div class="formulario__grupo" id="grupo__apellido">
-                          <label class="formulario__label">Apellido</label>
-                   <div class="formulario__grupo-input">
-                          <input type="text" class="formulario__input" name="apellido" id="apellido">
-                          <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                  </div>
-                        <p class="formulario__input-error">El Apellido debe tener máximo caracteres y solo se admiten mayúsculas y minúsculas.</p>
-                </div>
-      
-        <div class="formulario__grupo" id="grupo__correo">
-            <label class="formulario__label">Correo Electrónico</label>
-            <div class="formulario__grupo-input">
-                <input type="email" class="formulario__input" name="correo" id="correo" placeholder="tuemail@gmail.com">
-                <i class="formulario__validacion-estado fas fa-times-circle"></i>
-            </div>
-            <p class="formulario__input-error">El correo debe tener mÍnimo 4 caracteres.</p>
-        </div>
+    <form class="formulario" id="formulario">
 
-        <div class="formulario__grupo" id="grupo__password">
-            <label class="formulario__label">Contraseña</label>
-            <div class="formulario__grupo-input">
-                <input type="password" class="formulario__input" name="password" id="password">
-                <i class="formulario__validacion-estado fas fa-times-circle"></i>
-            </div>
-            <p class="formulario__input-error">La contraseña debe ser de 4 a 8 dígitos</p>
+      <!--GRUPO DE USUARIO - -->
+      <div class="formulario__grupo" id="grupo__nombre">
+        <label class="formulario__label">Nombre</label>
+        <div class="formulario__grupo-input">
+          <input type="text" class="formulario__input" name="nombre" id="nombre">
+          <i class="formulario__validacion-estado fas fa-times-circle"></i>
         </div>
-
-        <div class="formulario__grupo" id="grupo__password2">
-            <label class="formulario__label">Repetir la contraseña</label>
-            <div class="formulario__grupo-input">
-                <input type="password" class="formulario__input" name="password2" id="password2">
-                <i class="formulario__validacion-estado fas fa-times-circle"></i>
-            </div>
-            <p class="formulario__input-error">Las contraseñas no coinciden.</p>
+        <p class="formulario__input-error">El Nombre debe tener máximo de 8 caracteres y solo se admiten mayúsculas y
+          minúsculas.</p>
+      </div>
+      <div class="formulario__grupo" id="grupo__apellido">
+        <label class="formulario__label">Apellido</label>
+        <div class="formulario__grupo-input">
+          <input type="text" class="formulario__input" name="apellido" id="apellido">
+          <i class="formulario__validacion-estado fas fa-times-circle"></i>
         </div>
-
-        <div class="formulario__grupo formulario__grupo-terminos" id="grupo__terminos">
-            <label class="formulario__label">
-                <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
-                <b class="formulario__span">Acepto los terminos y condiciones</b>
-            </label>
+        <p class="formulario__input-error">El Apellido debe tener máximo caracteres y solo se admiten mayúsculas y
+          minúsculas.</p>
+      </div>
+      <div class="formulario__grupo" id="grupo__correo">
+        <label class="formulario__label">Correo Electrónico</label>
+        <div class="formulario__grupo-input">
+          <input type="email" class="formulario__input" name="correo" id="correo" placeholder="tuemail@gmail.com">
+          <i class="formulario__validacion-estado fas fa-times-circle"></i>
         </div>
-      
-        <div class="formulario__mensaje" id="formulario__mensaje">
-            <p><i class="fas fa-exclamation-circle"> <b>Error:</b> Debes completar todos los campos</i></p>
+        <p class="formulario__input-error">El correo debe tener mÍnimo 4 caracteres.</p>
+      </div>
+      <div class="formulario__grupo" id="grupo__password">
+        <label class="formulario__label">Contraseña</label>
+        <div class="formulario__grupo-input">
+          <input type="password" class="formulario__input" name="password" id="password">
+          <i class="formulario__validacion-estado fas fa-times-circle"></i>
         </div>
-
-        <div class="formulario__grupo formulario__grupo-btn-enviar">
-            <!-- <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">El formulario se envió correctamente</p> -->
-            <input class="formulario__btn" type="submit" value="Enviar"> <a href="C:\Users\acer\OneDrive\Escritorio\PROYECTO FINAL\Dawson-ecommerce\index.html"></a>
+        <p class="formulario__input-error">La contraseña debe ser de 4 a 8 dígitos</p>
+      </div>
+      <div class="formulario__grupo" id="grupo__password2">
+        <label class="formulario__label">Repetir la contraseña</label>
+        <div class="formulario__grupo-input">
+          <input type="password" class="formulario__input" name="password2" id="password2">
+          <i class="formulario__validacion-estado fas fa-times-circle"></i>
         </div>
+        <p class="formulario__input-error">Las contraseñas no coinciden.</p>
+      </div>
+      <div class="formulario__grupo formulario__grupo-terminos" id="grupo__terminos">
+        <label class="formulario__label">
+          <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
+          <b class="formulario__span">Acepto los terminos y condiciones</b>
+        </label>
+      </div>
+      <div class="formulario__mensaje" id="formulario__mensaje">
+        <p><i class="fas fa-exclamation-circle"> <b>Error:</b> Debes completar todos los campos</i></p>
+      </div>
+      <div class="formulario__grupo formulario__grupo-btn-enviar">
+        <!-- <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">El formulario se envió correctamente</p> -->
+        <input class="formulario__btn" type="submit" value="Enviar"> <a
+          href="C:\Users\acer\OneDrive\Escritorio\PROYECTO FINAL\Dawson-ecommerce\index.html"></a>
+      </div>
     </form>
-    </main>
-    <footer></footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script type="module" src="../JS/register.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  </main>
+  <footer></footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script type="module" src="../JS/register.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
