--- a/views/register.html
+++ b/views/register.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dawson</title>
   <link rel="icon" href="../Resources/logoMinuatura.jpg">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../styles/register.css ">
   <link rel="stylesheet" href="../styles/index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -23,63 +24,85 @@
   <main>
     <!-- FORMULARIO DE REGISTRO -->
 
-    <form class="formulario" id="formulario">
+    <form class="formulario needs-validation" novalidate" id="formulario">
       <!--GRUPO DE USUARIO - -->
       <div class="formulario__grupo" id="grupo__nombre">
-        <label for="nombre" class="formulario__label">Nombre</label>
         <div class="formulario__grupo-input">
-          <input type="text" class="formulario__input" name="nombre" id="nombre" required>
-          <i class="formulario__validacion-estado fas fa-times-circle"></i>
+          <label for="nombre" class="formulario__label form-label">Nombre <span style="color: #ff0000;">*</span></label>
+          <input type="text" class="formulario__input form-control" name="nombre" id="nombre" >
+          <!-- <i class="formulario__validacion-estado fas fa-times-circle"></i> -->
+          <div class="invalid-feedback animate__animated animate__headShake mjeIncorrecto">
+            Es necesario completar el Nombre.
+          </div>
         </div>
-        <p class="formulario__input-error">El Nombre debe tener máximo de 8 caracteres y solo se admiten mayúsculas y
-          minúsculas.</p>
+        <!-- <p class="formulario__input-error">El Nombre debe tener máximo de 8 caracteres y solo se admiten mayúsculas y
+          minúsculas.</p> -->
       </div>
       <div class="formulario__grupo" id="grupo__apellido">
-        <label for="apellido" class="formulario__label">Apellido</label>
         <div class="formulario__grupo-input">
-          <input type="text" class="formulario__input" name="apellido" id="apellido" required>
-          <i class="formulario__validacion-estado fas fa-times-circle"></i>
+          <label for="apellido" class="formulario__label form-label">Apellido <span style="color: #ff0000;">*</span></label>
+          <input type="text" class="formulario__input form-control" name="apellido" id="apellido" >
+          <!-- <i class="formulario__validacion-estado fas fa-times-circle"></i> -->
+          <div class="invalid-feedback animate__animated animate__headShake mjeIncorrecto">
+            Es necesario completar el Apellido.
+          </div>
         </div>
-        <p class="formulario__input-error">El Apellido debe tener máximo caracteres y solo se admiten mayúsculas y
-          minúsculas.</p>
+        <!-- <p class="formulario__input-error">El Apellido debe tener máximo caracteres y solo se admiten mayúsculas y
+          minúsculas.</p> -->
       </div>
       <div class="formulario__grupo" id="grupo__correo">
-        <label for="correo" class="formulario__label">Correo Electrónico</label>
-        <div class="formulario__grupo-input">
-          <input type="email" class="formulario__input" name="correo" id="correo" placeholder="tuemail@gmail.com" required>
-          <i class="formulario__validacion-estado fas fa-times-circle"></i>
+        <div class="formulario__grupo-input has-validation d-flex flex-column">
+          <label for="correo" class="formulario__label form-label">Email <span style="color: #ff0000;">*</span></label>
+          <input type="email" class="formulario__input form-control" name="correo" id="correo" placeholder="tuemail@gmail.com" >
+          <!-- <i class="formulario__validacion-estado fas fa-times-circle"></i> -->
+          <div class="invalid-feedback animate__animated animate__headShake mjeIncorrecto">
+            Es necesario completar el Email.
+          </div>
         </div>
-        <p class="formulario__input-error">El correo debe tener mÍnimo 4 caracteres.</p>
+        <!-- <p class="formulario__input-error">El correo debe tener mÍnimo 4 caracteres.</p> -->
       </div>
       <div class="formulario__grupo" id="grupo__password">
-        <label for="password" class="formulario__label">Contraseña</label>
         <div class="formulario__grupo-input">
-          <input type="password" class="formulario__input" name="password" id="password" required>
-          <i class="formulario__validacion-estado fas fa-times-circle"></i>
+          <label for="password" class="formulario__label form-label">Contraseña <span style="color: #ff0000;">*</span></label>
+          <input type="password" class="formulario__input form-control" name="password" id="password" >
+          <!-- <i class="formulario__validacion-estado fas fa-times-circle"></i> -->
+          <div class="invalid-feedback animate__animated animate__headShake mjeIncorrecto">
+            Es necesario completar la contraseña.
+          </div>
         </div>
-        <p class="formulario__input-error">La contraseña debe ser de 4 a 8 dígitos</p>
+        <!-- <p class="formulario__input-error">La contraseña debe ser de 4 a 8 dígitos</p> -->
       </div>
       <div class="formulario__grupo" id="grupo__password2">
-        <label for="password2" class="formulario__label">Repetir la contraseña</label>
         <div class="formulario__grupo-input">
-          <input type="password" class="formulario__input" name="password2" id="password2" required>
-          <i class="formulario__validacion-estado fas fa-times-circle"></i>
+          <label for="password2" class="formulario__label form-label">Repetir la contraseña <span style="color: #ff0000;">*</span></label>
+          <input type="password" class="formulario__input form-control" name="password2" id="password2" >
+          <!-- <i class="formulario__validacion-estado fas fa-times-circle"></i> -->
+          <div class="invalid-feedback animate__animated animate__headShake mjeIncorrecto">
+            Las contraseñas no coinciden.
+          </div>
         </div>
-        <p class="formulario__input-error">Las contraseñas no coinciden.</p>
+        <!-- <p class="formulario__input-error">Las contraseñas no coinciden.</p> -->
       </div>
-      <div class="formulario__grupo formulario__grupo-terminos" id="grupo__terminos">
-        <label class="formulario__label">
-          <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
-          <b class="formulario__span">Acepto los terminos y condiciones</b>
+      <div class="formulario__grupo formulario__grupo-terminos form-check" id="grupo__terminos">
+        <label for="terminos" class="formulario__label form-check-label">
+        <input class="formulario__checkbox form-check-input" type="checkbox" name="terminos" id="terminos">
+        <b class="formulario__span">Acepto los <a href="../views/error404.html" class="link-warning">terminos y condiciones</a> <span style="color: #ff0000;">*</span></b>
+        <div class="invalid-feedback animate__animated animate__headShake mjeIncorrecto">
+          Es necesario aceptar los TyC.
+        </div>
         </label>
       </div>
-      <div class="formulario__mensaje" id="formulario__mensaje">
-        <p><i class="fas fa-exclamation-circle"> <b>Error:</b> Debes completar todos los campos</i></p>
+      <div>
+        <p><span style="color: #ff0000;">*</span> Estos campos son obligatorios.</p>
       </div>
+      <!-- <div class="formulario__mensaje" id="formulario__mensaje">
+        <p><i class="fas fa-exclamation-circle"> <b>Error:</b> Debes completar todos los campos</i></p>
+      </div> -->
       <div class="formulario__grupo formulario__grupo-btn-enviar">
         <!-- <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">El formulario se envió correctamente</p> -->
         <input class="formulario__btn" type="submit" value="Enviar"> <a
-          href="C:\Users\acer\OneDrive\Escritorio\PROYECTO FINAL\Dawson-ecommerce\index.html"></a>
+          href="#"></a>
+        <!-- <button type="submit" class="formulario__btn">Enviar</button> -->
       </div>
     </form>
   </main>
