--- a/views/productos.html
+++ b/views/productos.html
@@ -43,7 +43,7 @@
             <tr>
               <th>Producto</th>
               <th>Precio</th>
-              <th>Imagen/Descripción</th>
+              <th>Imagen/Descrip</th>
               <th>Categorias</th>
               <th>Stock</th>
               <th>Acciones</th>
