--- a/views/register.html
+++ b/views/register.html
@@ -86,6 +86,7 @@
         <button type="submit" class="formulario__btn">Enviar</button>
       </div>
     </form>
+    <p class="text-center mt-3">¿Ya tienes una cuenta? <b><a href="../views/login.html" class="link-warning">Iniciar sesión</a></b></p>
   </main>
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
